# convert_image

./: CMakeLists.txt  README.md
include/: Action.h  ConvertImage.h  CreateAction.h  LineAction.h  commands.h
src/: ConvertImage.cpp  CreateAction.cpp  LineAction.cpp  commands.cpp  main.cpp
